--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
     "@testing-library/jest-dom": "^5.11.8",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
+    "nodejs": "0.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-scripts": "4.0.1",
+    "react-scripts": "^4.0.1",
     "recharts": "^1.8.5",
     "web-vitals": "^0.2.4"
   },
