--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-      - uses: actions/first-interaction@1
+      - uses: actions/first-interaction@v1
         with: 
           repo-token: ${{ secrets.GITHUB_TOKEN }}
           pr-message: |-
